Fixed spacing for social icons on sidebar.

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -256,7 +256,7 @@ ul.social-icons {
 
   > li {
     display: inline-block;
-    margin: 0.3em;
+    margin: 0.5em;
   }
 }
 
